[package]
name = "tinyurl"
version = "0.2.0"
authors = ["Valerio Casalino <casalinovalerio.cv@gmail.com>"]
edition = "2018"

[dependencies]
async-tls = "0.8"
structopt = "0.3.9"
rustls    = "0.18.0"
async-std = "1.5.0"

[profile.release]
opt-level     = 'z'
lto           = true
codegen-units = 1
panic         = 'abort'
